[workspace]
members = ["packages/*", "contracts/oraiswap_token","contracts/oraiswap_converter","contracts/oraiswap_oracle","contracts/oraiswap_rewarder"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'


