[workspace]
resolver = '2'

members = ["packages/*", "contracts/*"]


[workspace.package]
version = "0.1.1"
authors = ["Terraform Labs, PTE.", "Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/cosmwasm.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/cosmwasm.git"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[workspace.dependencies]
cosmwasm-std = { version = "1.2" }
cosmwasm-schema = "1.2"
cosmwasm-storage = { version = "1.2" }
thiserror = "1.0.26"

cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-multi-test = "0.16.2"

oraiswap = { path = "./packages/oraiswap" }
oraiswap-oracle = { path = "./contracts/oraiswap_oracle" }
oraiswap-token = { path = "./contracts/oraiswap_token" }
oraiswap-pair = { path = "./contracts/oraiswap_pair" }
oraiswap-factory = { path = "./contracts/oraiswap_factory" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
