[package]
name = "cw20-ics20"
version = "0.16.1"
authors = ["Oraichain Labs"]
edition = "2021"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.9" }
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-ics20-msg = { path = "../../packages/cw20-ics20-msg" }
cosmwasm-std = { version = "1.1.0", features = ["stargate"] }
cw-storage-plus = "1.0.1"
cw-controllers = "1.0.1"
semver = "1"
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = "0.16.2"
