[package]
name = "oraiswap-converter"
version = "0.0.0"
authors = ["Terraform Labs, PTE.", "Oraichain Labs"]
edition = "2018"
description = "A Oraiswap rewarder contract - auto distribute reward to oraiswap_staking contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.16.0" } 
oraiswap = { path = "../../packages/oraiswap", default-features = false }
cosmwasm-std = { version = "1.1.0" }
cosmwasm-storage = { version = "1.1.0", default-features = false, features = []  }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.1.0"
