[package]
name = "oraiswap-converter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude = { workspace = true }
description = "A Oraiswap rewarder contract - auto distribute reward to oraiswap_staking contract"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { workspace = true }
oraiswap = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = [] }
cosmwasm-schema = { workspace = true }
