[package]
name = "oraiswap-factory"
version = "0.0.0"
authors = ["Terraform Labs, PTE.", "Oraichain Labs"]
edition = "2018"
description = "A Oraiswap factory contract - auto pair contract generator and also directory for all pairs"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
oraiswap = { path = "../../packages/oraiswap", default-features = false }
cosmwasm-std = { version = "1.1.0" }
cosmwasm-storage = "1.1.0"
cw-storage-plus = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
protobuf = { version = "2", features = ["with-bytes"] }
cw-multi-test = { version = "0.16.0" }

[dev-dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-storage = { version = "1.1.0", features = ["iterator"] }
oraiswap-pair = { path = "../oraiswap_pair" }
oraiswap-oracle = { path = "../oraiswap_oracle" }
oraiswap-token = { path = "../oraiswap_token" }