[package]
name = "oraiswap-factory"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude = { workspace = true }
description = "A Oraiswap factory contract - auto pair contract generator and also directory for all pairs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
cosmwasm-schema = { workspace = true }
oraiswap = { workspace = true }

[dev-dependencies]
oraiswap-pair = { workspace = true }
oraiswap-oracle = { workspace = true }
oraiswap-token = { workspace = true }
