[package]
name = "oraiswap-ibc"
version = "0.1.0"
authors = ["Giancarlos Salas <me@giansalex.dev>"]
edition = "2018"
description = "Osmosis IBC swap (Client)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cosmwasm-std = { version = "1.1.0", features = ["stargate"] }
cw-storage-plus = "0.16.0"
cw-controllers = "0.16.0"
thiserror = { version = "1.0.23" }
cosmwasm-schema = { version = "1.1.0" }
oraiswap = { path = "../../packages/oraiswap", default-features = false }
