[package]
name = "oraiswap-ibc"
version = "0.1.0"
authors = ["Giancarlos Salas <me@giansalex.dev>"]
edition = "2021"
description = "Osmosis IBC swap (Client)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }
cw-storage-plus = "1.0.1"
cw-controllers = "1.0.1"
thiserror = { version = "1.0.23" }
cosmwasm-schema = { version = "1.1.9" }
oraiswap = { path = "../../packages/oraiswap", default-features = false }
