[package]
name = "oraiswap-limit-order"
version = "2.2.0"
authors = ["Terraform Labs, PTE.", "Oraichain Labs"]
edition = "2021"
description = "A limit order contract for Mirror Protocol - provides limit order features"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "1.0.1" } 
cosmwasm-std = { version = "1.1.9" }
cosmwasm-storage = { version = "1.1.9" }
cosmwasm-schema = "1.1.9"
oraiswap = { path = "../../packages/oraiswap", default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
oraiswap-token = { path = "../oraiswap_token" }

