[package]
name = "oraiswap-oracle"
version = "0.1.0"
authors = ["tupt <tubackkhoa@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/execute/query exports
library = []

[dependencies]
cw-storage-plus = { version = "1.0.1", features = ["iterator"] }
cosmwasm-std = { version = "1.1.9" }
thiserror = { version = "1.0.23" }
cosmwasm-schema = "1.1.9"
oraiswap = { path = "../../packages/oraiswap" }

[dev-dependencies]
cw20 = { version = "1.0.1" }
oraiswap-token = { path = "../oraiswap_token" }
