[package]
name = "oraiswap-oracle"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
exclude = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/execute/query exports
library = []

[dependencies]
cw-storage-plus = { workspace = true, features = ["iterator"] }
cosmwasm-std = { workspace = true }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
oraiswap = { workspace = true }

[dev-dependencies]
cw20 = { workspace = true }
oraiswap-token = { workspace = true }
