[package]
name = "oraiswap-pair"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude = { workspace = true }
description = "A Oraiswap pair contract"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
oraiswap = { workspace = true }
integer-sqrt = "0.1.5"

[dev-dependencies]
cosmwasm-storage = { workspace = true }
oraiswap-oracle = { workspace = true }
oraiswap-token = { workspace = true }
