[package]
name = "oraiswap-router"
version = "0.0.0"
authors = ["Terraform Labs, PTE.", "Oraichain Labs"]
edition = "2018"
description = "A Oraiswap router contract - provides multi-step operations to facilitate single sign operation"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.16.0" }
cosmwasm-std = { version = "1.1.0" }
oraiswap = { path = "../../packages/oraiswap" }
cw-storage-plus = { version = "0.16.0" }
integer-sqrt = "0.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.1.0"

[dev-dependencies]
cosmwasm-storage = { version = "1.1.0" }
oraiswap-oracle = { path = "../oraiswap_oracle" }
oraiswap-token = { path = "../oraiswap_token" }
oraiswap-pair = { path = "../oraiswap_pair" }
oraiswap-factory = { path = "../oraiswap_factory" }
