[package]
name = "oraiswap-staking"
version = "2.1.1"
authors = ["Terraform Labs, PTE.", "Orai Labs"]
edition = "2021"
description = "A Staking contract for Mirror Protocol - distribute rewards to stakers"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "1.0.1" } 
oraiswap = { path = "../../packages/oraiswap" }
cosmwasm-std = { version = "1.1.9" }
cosmwasm-storage = { version = "1.1.9", default-features = false, features = ["iterator"]  }
cosmwasm-schema = "1.1.9"


[dev-dependencies]
oraiswap-oracle = { path = "../oraiswap_oracle" }
oraiswap-token = { path = "../oraiswap_token" }
oraiswap-pair = { path = "../oraiswap_pair" }
oraiswap-factory = { path = "../oraiswap_factory" }

