[package]
name = "oraiswap-staking"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude = { workspace = true }
description = "A Staking contract for Mirror Protocol - distribute rewards to stakers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { workspace = true }
oraiswap = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cosmwasm-schema = { workspace = true }


[dev-dependencies]
oraiswap-oracle = { workspace = true }
oraiswap-token = { workspace = true }
oraiswap-pair = { workspace = true }
oraiswap-factory = { workspace = true }
cosmwasm-testing-util = { workspace = true }
cosmwasm-vm = { workspace = true }
