[package]
name = "oraiswap-token"
version = "0.0.0"
authors = ["Oraichain Labs"]
edition = "2018"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/oraiswap/oraiswap"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.16.0" }
# using cw20-base contract as library
cw20-base = { version = "0.16.0", features = ["library"] }
cosmwasm-std = { version = "1.1.8" }
thiserror = { version = "1.0.23" }
oraiswap = { path = "../../packages/oraiswap"}
cosmwasm-schema = "1.1.8"





