[package]
name = "oraiswap-token"
version = { workspace = true }
authors = { workspace = true }
edition ={ workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
description = "Backward compatible implementation of a CosmWasm-20 compliant token"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { workspace = true }
# using cw20-base contract as library
cw20-base = { workspace = true, features = ["library"] }
cosmwasm-std = { workspace = true }
thiserror = { workspace = true }
oraiswap = { workspace = true }
cosmwasm-schema = { workspace = true }





